Clean-up makefiles, update Readme

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,15 +1,17 @@
-SRCS=typeinfo.cc personality.cc cxa_routines.cc
-OBJS=$(SRCS:.cc=.o)
+SRCS ::= typeinfo.cc personality.cc cxa_routines.cc
+OBJS ::= $(SRCS:.cc=.o)
 
-CPPFLAGS=-nostdinc++
+OUTDIR = .
 
-CCFLAGS=-g -march=x86-64 -mno-sse -mno-red-zone -ffreestanding -fno-stack-protector
+# See top-level makefile.
+
+CXX=g++
 
 all: $(OBJS)
-	ar -r libcxxabi.a $(OBJS)
+	ar -r $(OUTDIR)/libcxxabi.a $(OBJS)
 
 $(OBJS): %.o: %.cc
-	g++ $(CPPFLAGS) $(CCFLAGS) -c $< -o $@
+	$(CXX) $(CCPPFLAGS) $(CCFLAGS) -c $< -o $@
 
 clean:
 	rm -f $(OBJS)
