Support for throwing nullptr_t and catching via T* (for any T)

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,17 +1,24 @@
 SRCS ::= typeinfo.cc personality.cc cxa_routines.cc
 OBJS ::= $(SRCS:.cc=.o)
 
+# sources which need RTTI enabled:
+RTTI_SRCS ::= typeinfo_get_npti.cc
+RTTI_OBJS ::= $(RTTI_SRCS:.cc=.o)
+
 OUTDIR = .
 
 # See top-level makefile.
 
 CXX=g++
 
-all: $(OBJS)
-	ar -r $(OUTDIR)/libcxxabi.a $(OBJS)
+all: $(OBJS) $(RTTI_OBJS)
+	ar -r $(OUTDIR)/libcxxabi.a $(OBJS) $(RTTI_OBJS)
 
 $(OBJS): %.o: %.cc
 	$(CXX) $(CXXPPFLAGS) $(CXXFLAGS) -c $< -o $@
+
+$(RTTI_OBJS): %.o: %.cc
+	$(CXX) $(CXXPPFLAGS) $(CXXFLAGS) -frtti -c $< -o $@
 
 clean:
 	rm -f $(OBJS)
